updated css & html to better style the portfolio page

--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
 
             <div class="bioSection">
 
-                <img src="/images/200x150.png" alt="Bio image" />
+                <img src="images/200x150.png" alt="Bio image" />
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptas quia quod maxime aliquid aperiam amet libero vero minima minus beatae dolorem suscipit, inventore dolorum iste eos tempore cumque possimus.
                 </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi provident omnis molestias, maiores quod voluptas architecto porro sint qui quam consequatur, odio, quaerat voluptatem laudantium quibusdam suscipit explicabo? Blanditiis, a!</p>
 
             </div>
 
