Finished styling the main protfolio.html page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Push's Portfolio - About Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 
@@ -43,11 +44,9 @@
             <div class="bioSection">
 
                 <img src="images/200x150.png" alt="Bio image" />
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptas quia quod maxime aliquid aperiam amet libero vero minima minus beatae dolorem suscipit, inventore dolorum iste eos tempore cumque possimus.
+                <p>
+                Lorem ipsum dolor amet gluten-free narwhal single-origin coffee try-hard snackwave cliche waistcoat kinfolk plaid. Meh gastropub banjo schlitz mumblecore next level ennui normcore enamel pin seitan organic. Palo santo tofu dreamcatcher pok pok yr four loko activated charcoal gastropub freegan authentic readymade. Mustache readymade marfa la croix air plant narwhal. Tumeric neutra bitters, copper mug umami photo booth deep v knausgaard. Hexagon tofu polaroid, tilde dreamcatcher chartreuse skateboard microdosing godard. Gluten-free semiotics hoodie, mixtape small batch thundercats +1 gochujang normcore listicle selfies iPhone deep v 3 wolf moon live-edge.</p><p> Etsy vaporware synth iceland tote bag taiyaki. Meditation PBR&B flannel, pabst edison bulb locavore wayfarers franzen chia pickled. Roof party schlitz hammock pug 8-bit, pok pok venmo man bun vice brunch tumeric. Af seitan gentrify whatever, fanny pack humblebrag pickled butcher pork belly kogi. Church-key pork belly keytar williamsburg palo santo. Chartreuse heirloom fashion axe tacos cold-pressed gentrify stumptown. Hexagon slow-carb iPhone forage. Butcher snackwave PBR&B semiotics, art party slow-carb tumeric vape food truck cornhole lyft waistcoat swag kogi 8-bit. Pabst hot chicken portland venmo, asymmetrical beard irony sriracha before they sold out jianbing mixtape squid affogato scenester. Palo santo copper mug fashion axe, blog normcore green juice sriracha craft beer prism farm-to-table intelligentsia. Cred hoodie vice taiyaki messenger bag man bun.
                 </p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi provident omnis molestias, maiores quod voluptas architecto porro sint qui quam consequatur, odio, quaerat voluptatem laudantium quibusdam suscipit explicabo? Blanditiis, a!</p>
-
             </div>
 
     </section>
