--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
             <nav id="navButtons">
                 <ul>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/portfolio.html">Portfolio</a></li>
-                    <li><a href="/contact.html">contact</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
 
