--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,10 @@
         <h1>Portfolio</h1>
 
                 <div class="portfolio wrap">
-                    <div class="portfolioItem"></div>
-                    <div class="portfolioItem"></div>
-                    <div class="portfolioItem"></div>
+                    
+                    <div class="portfolioItem">
+                        <img src="images/map.jpeg" />
+                    </div>
                     <div class="portfolioItem"></div>
                     <div class="portfolioItem"></div>
                     <div class="portfolioItem"></div>
