--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li><a href="index.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
 
@@ -42,15 +42,46 @@
         <h1>Portfolio</h1>
 
                 <div class="portfolio wrap">
+
+                    <div class="itemWrapper">
+                        <div class="portfolioItem">
+                            <label>Item Label</label>
+                            <img src="images/map.jpeg" />
+                        </div>
+                    </div>
+                    <div class="itemWrapper">
+                        <div class="portfolioItem">
+                            <label>Item Label</label>
+                            <img src="images/map.jpeg" />
+                        </div>
+                    </div>
+                    <div class="itemWrapper">
+                        <div class="portfolioItem">
+                            <label>Item Label</label>
+                            <img src="images/map.jpeg" />
+                        </div>
+                    </div>
+                    <div class="itemWrapper">
+                        <div class="portfolioItem">
+                            <label>Item Label</label>
+                            <img src="images/map.jpeg" />
+                        </div>
+                    </div>
+                    <div class="itemWrapper">
+                        <div class="portfolioItem">
+                            <label>Item Label</label>
+                            <img src="images/map.jpeg" />
+                        </div>
+                    </div>
+                    <div class="itemWrapper">
+                        <div class="portfolioItem">
+                            <label>Item Label</label>
+                            <img src="images/map.jpeg" />
+                        </div>
+                    </div>
+
+                </div>
                     
-                    <div class="portfolioItem">
-                        <img src="images/map.jpeg" />
-                    </div>
-                    <div class="portfolioItem"></div>
-                    <div class="portfolioItem"></div>
-                    <div class="portfolioItem"></div>
-                    <div class="portfolioItem"></div>
-                    </div>
         
     </section>
 
